Fixing text-align on notes

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -4026,6 +4026,7 @@ a.expand {
 	text-decoration: none !important;
 	cursor: help;
 	white-space: normal !important;
+	text-align: left;
 }
 
 a.expand span {
